--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-        .file-container { margin-bottom: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
+        .file-container { margin-bottom: 20px; padding: 10px; border: a1px solid #ccc; border-radius: 5px; }
         .file-name { font-weight: bold; }
         .error { color: red; font-weight: bold; }
         .download-btn { margin-top: 10px; padding: 5px 10px; background-color: #4CAF50; color: white; border: none; border-radius: 3px; cursor: pointer; }
         img { max-width: 100%; height: auto; margin-top: 10px; }
+        .progress-bar { width: 100%; background-color: #f0f0f0; padding: 3px; border-radius: 3px; box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2); }
+        .progress-bar-fill { display: block; height: 22px; background-color: #659cef; border-radius: 3px; transition: width 500ms ease-in-out; }
     </style>
 </head>
 <body>
     <h1>Multi-format File Converter</h1>
+    <label for="textChunkSize">Text chunk size (characters): </label>
+    <input type="number" id="textChunkSize" value="5000" min="1000" max="50000">
+    <br><br>
     <input type="file" id="fileInput" accept=".pdf,.txt,.doc,.docx,.xls,.xlsx,.jpg,.jpeg,.png,.gif" multiple>
     <button id="processBtn">Process All</button>
     <div id="output"></div>
@@ -57,31 +62,42 @@
             const output = document.getElementById('output');
             const fileContainer = document.createElement('div');
             fileContainer.className = 'file-container';
-            fileContainer.innerHTML = `<div class="file-name">${file.name}</div>`;
+            fileContainer.innerHTML = `
+                <div class="file-name">${file.name}</div>
+                <div class="progress-bar">
+                    <span class="progress-bar-fill" style="width: 0%;"></span>
+                </div>
+            `;
             output.appendChild(fileContainer);
+
+            const progressBar = fileContainer.querySelector('.progress-bar-fill');
+            const updateProgress = (progress) => {
+                progressBar.style.width = `${progress}%`;
+                progressBar.textContent = `${Math.round(progress)}%`;
+            };
 
             try {
                 const fileType = file.name.split('.').pop().toLowerCase();
                 switch (fileType) {
                     case 'pdf':
-                        await processPDF(file, fileContainer);
+                        await processPDF(file, fileContainer, updateProgress);
                         break;
                     case 'txt':
-                        await processText(file, fileContainer);
+                        await processText(file, fileContainer, updateProgress);
                         break;
                     case 'doc':
                     case 'docx':
-                        processWord(file, fileContainer);
+                        processWord(file, fileContainer, updateProgress);
                         break;
                     case 'xls':
                     case 'xlsx':
-                        await processExcel(file, fileContainer);
+                        await processExcel(file, fileContainer, updateProgress);
                         break;
                     case 'jpg':
                     case 'jpeg':
                     case 'png':
                     case 'gif':
-                        await processImage(file, fileContainer);
+                        await processImage(file, fileContainer, updateProgress);
                         break;
                     default:
                         throw new Error('Unsupported file type');
@@ -92,7 +108,7 @@
             }
         }
 
-        async function processPDF(file, container) {
+        async function processPDF(file, container, updateProgress) {
             const reader = new FileReader();
             reader.onload = async function(e) {
                 const typedarray = new Uint8Array(e.target.result);
@@ -120,6 +136,8 @@
                         name: `${file.name.replace('.pdf', '')}_page${i}.png`,
                         data: img.src
                     });
+
+                    updateProgress((i / pdf.numPages) * 100);
                 }
 
                 container.innerHTML += `<div>Processed ${pdf.numPages} pages</div>`;
@@ -128,30 +146,49 @@
             reader.readAsArrayBuffer(file);
         }
 
-        async function processText(file, container) {
+        async function processText(file, container, updateProgress) {
             const reader = new FileReader();
             reader.onload = async function(e) {
                 const content = e.target.result;
-                const img = await textToImage(content, file.name);
-                container.appendChild(img);
+                const chunkSize = parseInt(document.getElementById('textChunkSize').value);
+                const chunks = chunkText(content, chunkSize);
+                
+                for (let i = 0; i < chunks.length; i++) {
+                    const img = await textToImage(chunks[i], `${file.name} (Part ${i + 1})`);
+                    container.appendChild(img);
 
-                processedFiles.push({
-                    name: file.name.replace('.txt', '.png'),
-                    data: img.src
-                });
+                    processedFiles.push({
+                        name: `${file.name.replace('.txt', '')}_part${i + 1}.png`,
+                        data: img.src
+                    });
 
-                container.innerHTML += '<div>Text converted to image</div>';
+                    updateProgress(((i + 1) / chunks.length) * 100);
+                }
+
+                container.innerHTML += 
+                    chunks.length > 1 ? `<div>Split into ${chunks.length} parts</div>` : '<div>Processing complete</div>';
                 addDownloadButton(container, file.name.replace('.txt', ''));
             };
             reader.readAsText(file);
         }
 
-        function processWord(file, container) {
-            container.innerHTML += '<div>Word documents cannot be fully processed in the browser. Original file will be downloaded.</div>';
-            addDownloadButton(container, file.name, file);
+        function chunkText(text, chunkSize) {
+            const chunks = [];
+            let i = 0;
+            while (i < text.length) {
+                chunks.push(text.slice(i, i + chunkSize));
+                i += chunkSize;
+            }
+            return chunks;
         }
 
-        async function processExcel(file, container) {
+        function processWord(file, container, updateProgress) {
+            container.innerHTML += '<div>Word documents cannot be fully processed in the browser. Original file will be downloaded.</div>';
+            addDownloadButton(container, file.name, file);
+            updateProgress(100);
+        }
+
+        async function processExcel(file, container, updateProgress) {
             const reader = new FileReader();
             reader.onload = async function(e) {
                 const data = new Uint8Array(e.target.result);
@@ -173,6 +210,8 @@
                         name: `${file.name.replace('.xlsx', '').replace('.xls', '')}_${sheetName}.png`,
                         data: img.src
                     });
+
+                    updateProgress(((i + 1) / workbook.SheetNames.length) * 100);
                 }
 
                 container.innerHTML += `<div>Processed ${workbook.SheetNames.length} sheets</div>`;
@@ -181,7 +220,7 @@
             reader.readAsArrayBuffer(file);
         }
 
-        async function processImage(file, container) {
+        async function processImage(file, container, updateProgress) {
             const reader = new FileReader();
             reader.onload = function(e) {
                 const img = document.createElement('img');
@@ -193,6 +232,7 @@
                     data: e.target.result
                 });
 
+                updateProgress(100);
                 container.innerHTML += '<div>Image processed</div>';
                 addDownloadButton(container, file.name);
             };
